Solution 16.2